--- a/index.html
+++ b/index.html
@@ -93,6 +93,97 @@
               padding: 0px;
               border: 3px solid #aaaaaa;
             }
+
+            #picks1 {
+              position: absolute;
+              top: 300px;
+              left: 70px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks2 {
+              position: absolute;
+              top: 300px;
+              left: 190px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks3 {
+              position: absolute;
+              top: 300px;
+              left: 310px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks4 {
+              position: absolute;
+              top: 300px;
+              left: 430px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks5 {
+              position: absolute;
+              top: 300px;
+              left: 550px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks6 {
+              position: absolute;
+              top: 300px;
+              left: 790px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks7 {
+              position: absolute;
+              top: 300px;
+              left: 910px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks8 {
+              position: absolute;
+              top: 300px;
+              left: 1030px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks9 {
+              position: absolute;
+              top: 300px;
+              left: 1150px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #picks10 {
+              position: absolute;
+              top: 300px;
+              left: 1270px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
             #div2 {
               position: absolute;
               width: 1440px;
@@ -182,6 +273,16 @@
         <div id="ban8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="picks10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
 
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
