--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@ div {text-align: center;}
 <body>
 
 <h1>Sentiment Anaylsis</h1>
-<p>This is a paragraph.</p>
-<div>This is a div.</div>
+<table style="width:100%">
+    <tr>
+      <th>Streamer</th>
+      <th>Chat Sentiment</th>
+    </tr>
+    <tr>
+      <td>Mizkif</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>loltyler1</td>
+      <td>0</td>
+    </tr>
+  </table>
 
 </body>
 </html>
