--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@ td {text-align: center;}
       <td>loltyler1</td>
       <td>0</td>
     </tr>
+    <tr>
+        <td>Ninja</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>Tfue</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>shroud</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>myth</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>rubius</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>pokimane</td>
+        <td>0</td>
+    </tr>
   </table>
 
 </body>
