--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@ td {text-align: center;}
         <td>0</td>
     </tr>
     <tr>
-        <td>shroud</td>
+        <td>Shroud</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>myth</td>
+        <td>Myth</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>rubius</td>
+        <td>Rubius</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>pokimane</td>
+        <td>Pokimane</td>
         <td>0</td>
     </tr>
   </table>
